objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Accessory_Sale</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Croquettes_Sale</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accessory__c</fullName>
        <label>Accessory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correas</fullName>
                    <default>true</default>
                    <label>Correas</label>
                </value>
                <value>
                    <fullName>Juguetes</fullName>
                </value>
                <value>
                    <fullName>Ropa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <formula>Amount * 0.16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accessory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nylon</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Metálicas</fullName>
                </value>
                <value>
                    <fullName>Cuero</fullName>
                </value>
                <value>
                    <fullName>Vestidos</fullName>
                </value>
                <value>
                    <fullName>Suéter</fullName>
                </value>
                <value>
                    <fullName>Playeras</fullName>
                </value>
                <value>
                    <fullName>Pelotas</fullName>
                </value>
                <value>
                    <fullName>Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Accesory_Sale_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Accessory_Sale</businessProcess>
        <label>Accesory Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Croquettes_Sale_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Croquettes_Sale</businessProcess>
        <label>Croquettes Sale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Won_With_Social_Reason_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR(
  ISPICKVAL( Type , &quot;Croquettes sale&quot;),
  ISPICKVAL( Type , &quot;Accessories sale&quot;)
 ),
 ISPICKVAL( StageName , &quot;Closed Won&quot;),
 ISBLANK(Account.Social_Reason__c)  
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>The &quot;Social Reason&quot; field of the account cannot be null.</errorMessage>
    </validationRules>
</CustomObject>